--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
-beautifulsoup4==4.10.0
-requests==2.26.0
-selenium==3.141.0
-python-dotenv==0.19.0
-
+beautifulsoup4==4.12.2
+bs4==0.0.1
+btoa==1.0.1
+certifi==2023.11.17
+charset-normalizer==3.3.2
+idna==3.6
+Js2Py==0.74
+py_mini_racer==0.6.0
+PyExecJS==1.5.1
+pyjsparser==2.7.1
+requests==2.31.0
+six==1.16.0
+soupsieve==2.5
+tzlocal==5.2
+urllib3==2.1.0
