update README.md and requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
+art==6.1
 beautifulsoup4==4.12.2
 bs4==0.0.1
 btoa==1.0.1
 certifi==2023.11.17
 charset-normalizer==3.3.2
+colorama==0.4.6
 idna==3.6
-Js2Py==0.74
-py_mini_racer==0.6.0
-PyExecJS==1.5.1
-pyjsparser==2.7.1
+markdown-it-py==3.0.0
+mdurl==0.1.2
+Pygments==2.17.2
 requests==2.31.0
-six==1.16.0
+rich==13.7.0
 soupsieve==2.5
-tzlocal==5.2
 urllib3==2.1.0
